Update and rename PCB2025_SpaMask.md to 202504-08-PCB2025_SpaMask.md

--- a/_posts/202504-08-PCB2025_SpaMask.md
+++ b/_posts/202504-08-PCB2025_SpaMask.md
@@ -1,7 +1,7 @@
 ---
 title: 'SpaMask 正式发表在 PLoS Computational Biology 2'
 date: 2025-04-08
-permalink: /posts/PCB2025_SpaMask
+permalink: /posts/202504-08-PCB2025_SpaMask
 tags:
   - cool posts
   - category1
